// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Typography /> should render and match snapshot for default props 1`] = `
<Text
  accessibilityLabel="undefined"
  lineHeightVariant="min"
  style={
    Array [
      Object {
        "color": "#000000",
        "fontSize": 15,
        "lineHeight": 15,
      },
    ]
  }
  testID="undefined"
  variant="md"
/>
`;

exports[`<Typography /> should render and match snapshot for variant lg 1`] = `
<Text
  accessibilityLabel="undefined"
  lineHeightVariant="min"
  style={
    Array [
      Object {
        "color": "#000000",
        "fontSize": 17,
        "lineHeight": 17,
      },
    ]
  }
  testID="undefined"
  variant="lg"
/>
`;

exports[`<Typography /> should render and match snapshot for variant max 1`] = `
<Text
  accessibilityLabel="undefined"
  lineHeightVariant="min"
  style={
    Array [
      Object {
        "color": "#000000",
        "fontSize": 32,
        "lineHeight": 32,
      },
    ]
  }
  testID="undefined"
  variant="max"
/>
`;

exports[`<Typography /> should render and match snapshot for variant md 1`] = `
<Text
  accessibilityLabel="undefined"
  lineHeightVariant="min"
  style={
    Array [
      Object {
        "color": "#000000",
        "fontSize": 15,
        "lineHeight": 15,
      },
    ]
  }
  testID="undefined"
  variant="md"
/>
`;

exports[`<Typography /> should render and match snapshot for variant min 1`] = `
<Text
  accessibilityLabel="undefined"
  lineHeightVariant="min"
  style={
    Array [
      Object {
        "color": "#000000",
        "fontSize": 10,
        "lineHeight": 10,
      },
    ]
  }
  testID="undefined"
  variant="min"
/>
`;

exports[`<Typography /> should render and match snapshot for variant xl 1`] = `
<Text
  accessibilityLabel="undefined"
  lineHeightVariant="min"
  style={
    Array [
      Object {
        "color": "#000000",
        "fontSize": 20,
        "lineHeight": 20,
      },
    ]
  }
  testID="undefined"
  variant="xl"
/>
`;

exports[`<Typography /> should render and match snapshot for variant xs 1`] = `
<Text
  accessibilityLabel="undefined"
  lineHeightVariant="min"
  style={
    Array [
      Object {
        "color": "#000000",
        "fontSize": 13,
        "lineHeight": 13,
      },
    ]
  }
  testID="undefined"
  variant="xs"
/>
`;

exports[`<Typography /> should render and match snapshot for variant xxl 1`] = `
<Text
  accessibilityLabel="undefined"
  lineHeightVariant="min"
  style={
    Array [
      Object {
        "color": "#000000",
        "fontSize": 24,
        "lineHeight": 24,
      },
    ]
  }
  testID="undefined"
  variant="xxl"
/>
`;

exports[`<Typography /> should render and match snapshot for variant xxs 1`] = `
<Text
  accessibilityLabel="undefined"
  lineHeightVariant="min"
  style={
    Array [
      Object {
        "color": "#000000",
        "fontSize": 11,
        "lineHeight": 11,
      },
    ]
  }
  testID="undefined"
  variant="xxs"
/>
`;
